Rewritten the rest of Observer related classes to use Flow API. Various code inspection related changes.